# Tennis_Match_Scoreboard

./: .gitignore  .mypy.ini  alembic.ini  errors.py  main.py  materials.py  pagination.py  pyproject.toml  request.http
src/: .gitignore  alembic.ini  controller.py  errors.py  server.py  service.py
src/controller/: all_matches_controller.py  base_controller.py  match_score_controller.py  present_match_controller.py  request.http  start_game_controller.py
src/dao/: config.py  match_DAO.py  player_DAO.py  score_DAO.py
src/db/: database.py
src/db_models/: database.py  diagram_data_base.mwb  models.py
src/dto/: match_DTO.py  player_DTO.py  score_DTO.py
src/handlers/: all_matches_handler.py  base_handler.py  match_score_handler.py  matches_handler.py  present_match_handler.py  request.http  start_game_handler.py
src/migrations/: env.py
src/migrations/versions/: 375c80b7ef49_.py  3f2cef8ca312_31_10_2024.py  791d0b8a98b9_14_11_2024.py  97ac6912bd82_4444.py  b8268736af7b_24_10_2024.py  c3da768df77c_23_10_2024.py  c87ccb3fba63_30_10_2024.py
src/service/: service.py
src/storage/: config.py  database.py  models.py
src/tests/: test_service.py
src/view/: jinja_engine.py
src/view/static/: start.css  style.css
static/: start.css
storage/: database.py  models.py
templates/: finished_matches.html  match_finished.html  match_score.html  new_match.html  start.html
tests/: conftest.py  test_score_calculator.py  test_service.py  test_tennis_score.py
view/: 1_index.html  finished_matches.html  match_finished.html  new_match.html  start.css  start.html
(+7 files in other folders)
